<resources>
    <string name="app_name">XOXGameWithKotlinMvpDagger</string>

    <string name="fill_the_nae_fields">Please fill the name fields!</string>
    <string name="current_player">Current Player: %s</string>
    <string name="draw">There is  no winner!</string>
    <string name="click_start_again">Please click start again1</string>
    <string name="congratulations_winner">Consratulations! The winner is %s</string>
    <string name="start_again">START AGAIN</string>
    <string name="change_player_names">Change Player Names</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="please_enter_player_1">Please write the player 1 name</string>
    <string name="please_enter_player_2">Please write the player 2 name</string>
    <string name="start">START</string>

</resources>
