<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cv_player_names"
        android:layout_centerInParent="true"
        app:contentPadding="20dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_player_1"
                    android:hint="@string/please_enter_player_1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_2"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_player_2"
                    android:hint="@string/please_enter_player_2"/>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_player_names"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>